@@ -3,26 +3,18 @@ package org.lodder.subtools.sublibrary.data.tvdb;
 import java.io.IOException;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
-import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
-import java.util.OptionalInt;
-import java.util.stream.Collectors;
 
-import org.lodder.subtools.multisubdownloader.Messages;
 import org.lodder.subtools.sublibrary.Language;
 import org.lodder.subtools.sublibrary.Manager;
-import org.lodder.subtools.sublibrary.UserInteractionHandler;
-import org.lodder.subtools.sublibrary.cache.CacheType;
 import org.lodder.subtools.sublibrary.data.tvdb.exception.TheTvdbException;
 import org.lodder.subtools.sublibrary.data.tvdb.model.TheTvdbEpisode;
 import org.lodder.subtools.sublibrary.data.tvdb.model.TheTvdbSerie;
-import org.lodder.subtools.sublibrary.settings.model.TvdbMapping;
 import org.lodder.subtools.sublibrary.util.OptionalExtension;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import com.pivovarit.function.ThrowingSupplier;
 import com.uwetrottmann.thetvdb.TheTvdb;
 import com.uwetrottmann.thetvdb.entities.Episode;
 import com.uwetrottmann.thetvdb.entities.EpisodesResponse;
@@ -30,116 +22,36 @@ import com.uwetrottmann.thetvdb.entities.Series;
 import com.uwetrottmann.thetvdb.entities.SeriesResponse;
 import com.uwetrottmann.thetvdb.entities.SeriesResultsResponse;
 
+import lombok.AccessLevel;
+import lombok.Getter;
 import lombok.experimental.ExtensionMethod;
 import retrofit2.Response;
 
 @ExtensionMethod({ OptionalExtension.class })
-class TheTvdbApi {
+public class TheTvdbApi {
 
     private static final Logger LOGGER = LoggerFactory.getLogger(TheTvdbApi.class);
+    @Getter(value = AccessLevel.PRIVATE)
     private final Manager manager;
-    private final UserInteractionHandler userInteractionHandler;
     private final TheTvdb theTvdb;
 
-    public TheTvdbApi(Manager manager, UserInteractionHandler userInteractionHandler, String apikey) {
+    public TheTvdbApi(Manager manager, String apikey) {
         this.manager = manager;
-        this.userInteractionHandler = userInteractionHandler;
         this.theTvdb = new TheTvdb(apikey);
     }
 
-    public OptionalInt getSerieId(String seriename, Language language) throws TheTvdbException {
-        return getSerieId(seriename, language, null);
-    }
-
-    public OptionalInt getSerieId(String seriename, Language language, ThrowingSupplier<OptionalInt, TheTvdbException> noResultCallback)
-            throws TheTvdbException {
-        String encodedSerieName = URLEncoder.encode(seriename.toLowerCase().replace(" ", "-"), StandardCharsets.UTF_8);
-        return manager.getValueBuilder()
-                .key("TVDB-SerieId-%s-%s".formatted(encodedSerieName, language))
-                .cacheType(CacheType.DISK)
-                .optionalSupplier(() -> {
+    public List<TheTvdbSerie> getSeries(String seriename, Language language) throws TheTvdbException {
+        return getManager().valueBuilder()
+                .memoryCache()
+                .key("%s-series-%s-%s".formatted("TVDB", seriename, language))
+                .collectionSupplier(TheTvdbSerie.class, () -> {
+                    String encodedSerieName = URLEncoder.encode(seriename.toLowerCase().replace(" ", "-"), StandardCharsets.UTF_8);
                     try {
                         Response<SeriesResultsResponse> response =
                                 theTvdb.search().series(encodedSerieName, null, null, null, language == null ? null : language.getLangCode())
                                         .execute();
                         if (response.isSuccessful()) {
-                            List<Series> results = response.body().data.stream().toList();
-                            OptionalInt selectedTvdbId = selectTvdbIdForSerieName(results, seriename);
-                            if (selectedTvdbId.isPresent()) {
-                                return selectedTvdbId.mapToObj(id -> new TvdbMapping(id, seriename));
-                            }
-                        }
-                        if (noResultCallback != null) {
-                            OptionalInt tvdbId = noResultCallback.get();
-                            return tvdbId.isPresent() ? Optional.of(new TvdbMapping(tvdbId.getAsInt(), seriename)) :Optional.empty();
-                        }
-                        return Optional.empty();
-                    } catch (IOException e) {
-                        if (noResultCallback != null) {
-                            OptionalInt tvdbId = noResultCallback.get();
-                            return tvdbId.isPresent() ? Optional.of(new TvdbMapping(tvdbId.getAsInt(), seriename)) :Optional.empty();
-                        }
-                        throw new TheTvdbException(e);
-                    }
-                }).getOptional().mapToInt(TvdbMapping::getId);
-    }
-
-    private OptionalInt selectTvdbIdForSerieName(List<Series> options, String serieName) {
-        if (options.isEmpty()) {
-            return OptionalInt.empty();
-        } else if (!userInteractionHandler.getSettings().isOptionsConfirmProviderMapping() && options.size() == 1) {
-            return OptionalInt.of(options.get(0).id);
-        } else {
-            String formattedSerieName = serieName.replaceAll("[^A-Za-z]", "");
-            Comparator<Series> comp = Comparator.comparing(s -> formattedSerieName.equalsIgnoreCase(s.seriesName.replaceAll("[^A-Za-z]", "")),
-                    Comparator.reverseOrder());
-            comp = comp.thenComparing(s -> s.firstAired, Comparator.reverseOrder());
-            return userInteractionHandler
-                    .selectFromList(options.stream().sorted(comp).toList(),
-                            Messages.getString("Prompter.SelectTvdbMatchForSerie").formatted(serieName),
-                            "tvdb", s -> "%s (%s)".formatted(s.seriesName, s.firstAired))
-                    .mapToInt(s -> s.id);
-        }
-    }
-
-    public Optional<TheTvdbSerie> getSerie(int tvdbId, Language language) throws TheTvdbException {
-        return manager.getValueBuilder()
-                .key("TVDB-Serie-%s-%s".formatted(tvdbId, language))
-                .cacheType(CacheType.DISK)
-                .optionalSupplier(() -> {
-                    try {
-                        if (tvdbId != 0) {
-                            Response<SeriesResponse> response =
-                                    theTvdb.series().series(tvdbId, language == null ? null : language.getLangCode()).execute();
-                            if (response.isSuccessful()) {
-                                return Optional.of(seriesToTVDBSerie(response.body().data, language));
-                            }
-                        } else {
-                            LOGGER.warn("TVDB ID is 0! please fix");
-                        }
-                        return Optional.empty();
-                    } catch (IOException e) {
-                        throw new TheTvdbException(e);
-                    }
-                }).getOptional();
-    }
-
-    public List<TheTvdbEpisode> getAllEpisodes(int tvdbId, Language language) throws TheTvdbException {
-        return manager.getValueBuilder()
-                .key("TVDB-episodes-%s-%s".formatted(tvdbId, language))
-                .cacheType(CacheType.MEMORY)
-                .collectionSupplier(TheTvdbEpisode.class, () -> {
-                    try {
-                        if (tvdbId != 0) {
-                            Response<EpisodesResponse> response =
-                                    theTvdb.series().episodes(tvdbId, 1, language == null ? null : language.getLangCode()).execute();
-                            if (response.isSuccessful()) {
-                                return response.body().data.stream()
-                                        .map(episode -> episodeToTVDBEpisode(episode, language))
-                                        .collect(Collectors.toList());
-                            }
-                        } else {
-                            LOGGER.warn("TVDB ID is 0! please fix");
+                            return response.body().data.stream().map(series -> seriesToTVDBSerie(series, language)).toList();
                         }
                         return List.of();
                     } catch (IOException e) {
@@ -148,10 +60,25 @@ class TheTvdbApi {
                 }).getCollection();
     }
 
+    public Optional<TheTvdbSerie> getSerie(int tvdbId, Language language) throws TheTvdbException {
+        try {
+            Response<SeriesResponse> response =
+                    theTvdb.series()
+                            .series(tvdbId, language == null ? null : language.getLangCode())
+                            .execute();
+            if (response.isSuccessful()) {
+                return Optional.of(seriesToTVDBSerie(response.body().data, language));
+            }
+            return Optional.empty();
+        } catch (IOException e) {
+            throw new TheTvdbException(e);
+        }
+    }
+
     public Optional<TheTvdbEpisode> getEpisode(int tvdbId, int season, int episode, Language language) throws TheTvdbException {
-        return manager.getValueBuilder()
-                .key("TVDB-episode-%s-%s-%s-%s".formatted(tvdbId, season, episode, language))
-                .cacheType(CacheType.DISK)
+        return getManager().valueBuilder()
+                .memoryCache()
+                .key("%s-episode-%s-%s-%s-%s".formatted("TVDB", tvdbId, season, episode, language))
                 .optionalSupplier(() -> {
                     try {
                         Response<EpisodesResponse> response =
@@ -170,7 +97,7 @@ class TheTvdbApi {
     private TheTvdbSerie seriesToTVDBSerie(Series serie, Language lang) {
         TheTvdbSerie TheTVDBSerie = new TheTvdbSerie();
 
-        TheTVDBSerie.setId(toString(serie.id));
+        TheTVDBSerie.setId(serie.id);
         TheTVDBSerie.setAirsDayOfWeek(serie.airsDayOfWeek);
         TheTVDBSerie.setAirsTime(serie.airsTime);
         TheTVDBSerie.setContentRating(serie.rating);
@@ -179,10 +106,10 @@ class TheTvdbApi {
         TheTVDBSerie.setImdbId(serie.imdbId);
         TheTVDBSerie.setLanguage(lang);
         TheTVDBSerie.setNetwork(serie.network);
-        TheTVDBSerie.setOverview(serie.overview);
+        // TheTVDBSerie.setOverview(serie.overview);
         TheTVDBSerie.setRating(serie.rating);
         TheTVDBSerie.setRuntime(serie.runtime);
-        TheTVDBSerie.setSerieId(toString(serie.id));
+        // TheTVDBSerie.setSerieId(toString(serie.id));
         TheTVDBSerie.setSerieName(serie.seriesName);
         TheTVDBSerie.setStatus(serie.status);
 
@@ -199,7 +126,7 @@ class TheTvdbApi {
         tvdbEpisode.setEpisodeNumber(episode.airedEpisodeNumber);
         tvdbEpisode.setFirstAired(episode.firstAired);
         tvdbEpisode.setLanguage(lang);
-        tvdbEpisode.setOverview(episode.language.overview);
+        // tvdbEpisode.setOverview(episode.language.overview);
         tvdbEpisode.setSeasonNumber(episode.airedSeason);
         tvdbEpisode.setAbsoluteNumber(toString(episode.absoluteNumber));
         tvdbEpisode.setLastUpdated(toString(episode.lastUpdated));
